fuck this course, fuck TA, and go fuck themselves

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,22 @@ project(Project3)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Project4
-#        Scanner/Scan.cpp
-#        Scanner/DFA.cpp
-#        Scanner/NFA.cpp
-#        Scanner/regex.cpp
+        Scanner/Scan.cpp
+        Scanner/DFA.cpp
+        Scanner/NFA.cpp
+        Scanner/regex.cpp
+        Scanner/Scan.h
+
         Parser/grammer.cpp
         Parser/grammer.h
-        Parser/Parse.cpp Parser/Parse.h
-        Parser/fixTree.cpp Parser/fixTree.h
-        CodeGen/CogeGen.cpp CodeGen/CogeGen.h CodeGen/main.cpp CodeGen/VM.cpp CodeGen/VM.h)
+        Parser/Parse.cpp
+        Parser/Parse.h
+        Parser/fixTree.cpp
+        Parser/fixTree.h
+
+        CodeGen/CogeGen.cpp
+        CodeGen/CogeGen.h
+        CodeGen/VM.cpp
+        CodeGen/VM.h
+
+        main.cpp)
